--- a/index.html
+++ b/index.html
@@ -1,3 +1,35 @@
-<!DOCTYPE html><html><head><title>dps-calc</title><meta charset=utf-8><meta name=description content=dps-calc><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><link rel=icon type=image/png sizes=128x128 href="/icons/favicon-128x128.png"><link rel=icon type=image/png sizes=96x96 href="/icons/favicon-96x96.png"><link rel=icon type=image/png sizes=32x32 href="/icons/favicon-32x32.png"><link rel=icon type=image/png sizes=16x16 href="/icons/favicon-16x16.png"><link rel=icon type=image/ico href="/favicon.ico">  <script type="module" crossorigin src="/assets/index.0884195d.js"></script>
-  <link rel="stylesheet" href="/assets/index.b9b26631.css">
-</head><body><div id=q-app></div></body></html>
+<!doctype html>
+<html lang="en" class="dark">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.png" />
+		<meta name="viewport" content="width=device-width" />
+		
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C_Hv3of9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D2aeMGtI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.B-heSlG7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CEqtV9ay.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DJXJP6P3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BibHG-w-.js">
+	</head>
+	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
+		<div style="display: contents">
+			<script>
+				{
+					__sveltekit_16sz0l0 = {
+						base: ""
+					};
+
+					const element = document.currentScript.parentElement;
+
+					Promise.all([
+						import("/_app/immutable/entry/start.C_Hv3of9.js"),
+						import("/_app/immutable/entry/app.DJXJP6P3.js")
+					]).then(([kit, app]) => {
+						kit.start(app, element);
+					});
+				}
+			</script>
+		</div>
+	</body>
+</html>
