Update from https://github.com/Robonau/pserver-dps/commit/5750fb391327b3666c58c67498a2101d2522ff08

--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.78zkbcJU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.IRRij-qT.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CBDWkz7O.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D6GXGiUk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.B-heSlG7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CEqtV9ay.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BCZ3tE4C.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.LMb6TEBQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BibHG-w-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_f2kszd = {
+					__sveltekit_16enpfe = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.78zkbcJU.js"),
-						import("/_app/immutable/entry/app.BCZ3tE4C.js")
+						import("/_app/immutable/entry/start.CBDWkz7O.js"),
+						import("/_app/immutable/entry/app.LMb6TEBQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
